<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.managementleague.usecase.LeagueAddViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddLeagues">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_league_addres"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_league_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_league_addres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tie_league_address"
            android:text="@={viewmodel.address}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/sp_numteams"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:entries="@array/numequipos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_league_name"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_league_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tie_hint_league_name"
            android:text="@={viewmodel.name}"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_spiner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_league_addres" />

    <ImageButton
        android:id="@+id/btn_addres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_edit_location_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/til_league_addres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/til_league_addres" />

    <Button
        android:id="@+id/btn_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/btn_crear_league"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_numteams" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>